package com.balsani.domain.services;

public interface NavegadorDeInternet {
    void exibirPagina(String pagina);
    void adicionarNovaAba();
    void atualizarPagina();
}
